// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product Card should increse the counter 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
    Click Me
  </button>
</div>
`;

exports[`Product Card should the component 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
</div>
`;
